--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,538 @@
-body {
-  margin: 0;
+@use 'mixins';
+@use 'variables';
+
+* {
+  box-sizing: border-box;
 }
+
+/* #region page */
+.page {
+  font-family: 'Space Grotesk', sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  color: variables.$main-color;
+
+  scroll-behavior: smooth;
+
+  &__body {
+    margin: 0;
+    width: 100%;
+  }
+
+  &__menu {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    transition: all 0.3s;
+    transform: translateX(-100%);
+    opacity: 0;
+    pointer-events: none;
+
+    overflow: hidden;
+  }
+
+  &__menu:target {
+    transform: translateX(0);
+    opacity: 1;
+    pointer-events: all;
+  }
+}
+
+/* #endregion */
+
+/* #region main */
+.main {
+  &__section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  &__sections {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    @include mixins.on-desktop {
+      display: flex;
+      column-gap: 24px;
+    }
+  }
+
+  &__recommended-container {
+    @include mixins.on-desktop {
+      // display: flex;
+      // flex-direction: row;
+      // column-gap: 16px;
+      display: grid;
+      grid-template-areas:
+        'photo photo photo'
+        'title title title'
+        'parag parag parag'
+        'price price price';
+      column-gap: 24px;
+    }
+
+    @include mixins.on-big-desktop {
+      // display: flex;
+      // flex-direction: row;
+    }
+  }
+
+  &__recommended-section {
+    @include mixins.on-desktop {
+      width: 300px;
+    }
+
+    @include mixins.on-big-desktop {
+      width: 324px;
+    }
+  }
+
+  &__title {
+    display: flex;
+    width: 280px;
+    height: 32px;
+
+    margin-top: 0;
+    margin-bottom: 48px;
+
+    font-size: 32px;
+    line-height: 32px;
+
+    @include mixins.on-tablet {
+      width: 472px;
+      margin-top: 0;
+      margin-bottom: 72px;
+      font-size: 40px;
+      height: 40px;
+      line-height: 40px;
+    }
+
+    @include mixins.on-big-tablet {
+      width: 600px;
+    }
+
+    @include mixins.on-desktop {
+      justify-content: flex-start;
+      width: 948px;
+      margin-top: 0;
+      margin-bottom: 56px;
+      font-size: 48px;
+      line-height: 48px;
+    }
+
+    @include mixins.on-big-desktop {
+      width: 1020px;
+    }
+  }
+
+  &__image {
+    width: 280px;
+    height: 280px;
+    margin-bottom: 24px;
+
+    @include mixins.on-tablet {
+      width: 472px;
+      height: 472px;
+    }
+
+    @include mixins.on-big-tablet {
+      width: 600px;
+      height: 600px;
+    }
+
+    @include mixins.on-desktop {
+      grid-area: photo;
+      width: 300px;
+      height: 300px;
+      margin: 0;
+      margin-bottom: 24px;
+    }
+
+    @include mixins.on-big-desktop {
+      width: 324px;
+      height: 324px;
+      margin: 0;
+    }
+  }
+
+  &__paragraph-title {
+    margin-top: 0;
+    margin-bottom: 8px;
+    font-size: 18px;
+    line-height: 25px;
+
+    @include mixins.on-desktop {
+      grid-area: title;
+      margin-bottom: 8px;
+      font-size: 24px;
+    }
+  }
+
+  &__paragraph {
+    font-family: 'Space Mono', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    margin-top: 0;
+    margin-bottom: 12px;
+    width: 280px;
+
+    @include mixins.on-desktop {
+      height: 88px;
+      grid-area: parag;
+    }
+  }
+
+  &__price {
+    font-size: 16px;
+    margin-top: 0;
+    margin-bottom: 40px;
+
+    @include mixins.on-desktop {
+      grid-area: price;
+    }
+  }
+
+  &__input {
+    font-family: 'Space Mono', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+
+    outline: none;
+
+    width: 280px;
+    height: 48px;
+
+    background-color: variables.$input-bg;
+    border: variables.$input-bg;
+    border-radius: 8px;
+    color: #7e7e83;
+    padding-left: 16px;
+    margin-bottom: 16px;
+
+    &:hover {
+      background-color: variables.$input-bg;
+      border: 1px solid #d5d7de;
+    }
+
+    &:focus {
+      background-color: variables.$input-bg;
+      border: 1px solid variables.$main-color;
+      color: variables.$main-color;
+
+      &::placeholder {
+        padding-left: 0;
+      }
+    }
+
+    @include mixins.on-tablet {
+      width: 472px;
+    }
+
+    @include mixins.on-big-tablet {
+      width: 600px;
+    }
+
+    @include mixins.on-desktop {
+      width: 410px;
+    }
+  }
+
+  &__big-input {
+    width: 280px;
+    height: 148px;
+    padding-top: 14px;
+
+    // changes
+    resize: none;
+    outline: none;
+
+    background-color: variables.$input-bg;
+    border: variables.$input-bg;
+    border-radius: 8px;
+    padding-left: 16px;
+    margin-bottom: 32px;
+
+    &:hover {
+      background-color: variables.$input-bg;
+      border: 1px solid #d5d7de;
+    }
+
+    &:focus {
+      background-color: variables.$input-bg;
+      border: 1px solid variables.$main-color;
+      color: variables.$main-color;
+
+      &::placeholder {
+        padding-left: 0;
+      }
+    }
+
+    @include mixins.on-tablet {
+      width: 472px;
+    }
+
+    @include mixins.on-big-tablet {
+      width: 600px;
+    }
+
+    @include mixins.on-desktop {
+      width: 410px;
+    }
+  }
+
+  &__form {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+}
+
+.recommended {
+  margin-bottom: 96px;
+
+  @include mixins.on-tablet {
+    margin-bottom: 120px;
+  }
+
+  @include mixins.on-tablet {
+    margin-bottom: 128px;
+  }
+
+  &__last-item {
+    margin-bottom: 0;
+  }
+}
+
+::placeholder {
+  font-family: 'Space Mono', sans-serif;
+  font-weight: 400px;
+  font-size: 14px;
+
+  color: #7e7e83;
+}
+
+.categories {
+  margin-bottom: 0;
+
+  &__title {
+    width: 280px;
+    height: 96px;
+    margin-top: 0;
+
+    @include mixins.on-tablet {
+      height: 80px;
+      width: 472px;
+      font-size: 40px;
+      line-height: 40px;
+    }
+
+    @include mixins.on-desktop {
+      height: 96px;
+      width: 585px;
+      font-size: 48px;
+      line-height: 48px;
+    }
+  }
+
+  &__photos-section {
+    display: flex;
+    column-gap: 20px;
+    margin-bottom: 16px;
+  }
+
+  &__paragraph-title {
+    position: relative;
+    margin-bottom: 40px;
+    width: fit-content;
+
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: -8px;
+      display: block;
+      height: 2px;
+      width: 100%;
+      background-color: variables.$main-color;
+
+      transition: all 0.3s;
+      transform: scale(0);
+      transform-origin: left;
+    }
+
+    &:hover::after {
+      transform: scale(1);
+    }
+
+    @include mixins.on-tablet {
+      font-size: 24px;
+      line-height: 34px;
+    }
+  }
+
+  &__image {
+    transition: all 0.3s;
+    &:hover {
+      transform: scale(0.9);
+      box-shadow: 0 0 10px variables.$main-color;
+    }
+  }
+}
+
+.button {
+  width: 280px;
+  height: 56px;
+
+  background-color: variables.$main-color;
+  color: variables.$button-text-color-white;
+  border: 1px solid variables.$main-color;
+  border-radius: 8px;
+  margin-bottom: 96px;
+
+  font-family: 'Space Grotesk', sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 27px;
+  align-self: center;
+  text-decoration: none;
+  transition: all 0.3s;
+
+  &:hover {
+    background-color: #f8f8fa;
+    border: 2px solid #f0f1f4;
+    cursor: pointer;
+    color: variables.$main-color;
+    transform: scale(1.05);
+  }
+
+  &:focus {
+    background-color: #111;
+    border: #111;
+
+    color: variables.$button-text-color-white;
+  }
+
+  @include mixins.on-tablet {
+    width: 472px;
+    margin-bottom: 120px;
+  }
+
+  @include mixins.on-big-tablet {
+    width: 600px;
+  }
+
+  @include mixins.on-desktop {
+    width: 410px;
+  }
+}
+
+.about {
+  margin-top: 0;
+  margin-bottom: 0;
+
+  @include mixins.on-desktop {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    width: 100%;
+  }
+  &__container {
+    @include mixins.on-tablet {
+      width: 560px;
+      height: 422px;
+      line-height: 22px;
+      display: flex;
+      flex-direction: row;
+
+      margin-bottom: 120px;
+    }
+
+    @include mixins.on-big-tablet {
+      width: 600px;
+    }
+
+    @include mixins.on-desktop {
+      justify-content: center;
+      width: 100%;
+      column-gap: 24px;
+      height: 270px;
+    }
+  }
+
+  &__title {
+    @include mixins.on-tablet {
+      width: 288px;
+    }
+
+    @include mixins.on-desktop {
+      width: 498px;
+    }
+  }
+
+  &__bg-image {
+    width: 100%;
+    height: 200px;
+    margin-bottom: 48px;
+
+    @include mixins.on-tablet {
+      content: url(../images/about-bg-header-tablet.png);
+      height: 400px;
+    }
+
+    @include mixins.on-desktop {
+      content: url(../images/about-bg-header-desktop.png);
+      height: 460px;
+    }
+  }
+
+  &__last-item {
+    margin-bottom: 104px;
+
+    @include mixins.on-tablet {
+      width: 328px;
+      height: 424px;
+      margin-bottom: 0;
+      font-stretch: expanded;
+    }
+
+    @include mixins.on-desktop {
+      width: 498px;
+      height: 270px;
+    }
+  }
+}
+
+.contact-us {
+  @include mixins.on-tablet {
+    display: flex;
+    justify-content: center;
+  }
+
+  @include mixins.on-desktop {
+    display: flex;
+    justify-content: unset;
+  }
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    @include mixins.on-desktop {
+      width: 410px;
+    }
+  }
+}
+
+.title-on-desktop {
+  @include mixins.on-desktop {
+    width: 498px;
+    margin-bottom: 56px;
+  }
+}
+
+/* #endregion */
